--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -63,12 +63,14 @@
    "outputs": [],
    "source": [
     "#ローカルリポジトリを作成するディレクトリの指定\n",
-    "repo_path = '../repo'\n",
+    "#repo_path = '../repo'\n",
+    "#repo_path = '../repo2'\n",
+    "repo_path = '../repo3'\n",
     "\n",
     "#すでに../repoにファイルが存在するならクローンしない\n",
     "if os.listdir(repo_path) == []:\n",
     "    #リポジトリのクローン\n",
-    "    git.Repo.clone_from(repo_url, '../repo', branch=to_ver)"
+    "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver)"
    ]
   },
   {
@@ -84,7 +86,7 @@
     "#変更行数の割合を取得\n",
     "prob_list = dm.get_prob_list(java_line, java_commit)\n",
     "#依存関係の取得\n",
-    "java_module = dm.get_dependencies(repo_path)"
+    "import_module, exception_module= dm.get_dependencies(repo_path)"
    ]
   },
   {
@@ -94,8 +96,11 @@
    "outputs": [],
    "source": [
     "#結果の出力\n",
-    "print('java_module')\n",
-    "print('依存関係数: '+ str(len(java_module)))\n",
+    "print('import_module')\n",
+    "print('依存関係数: '+ str(len(import_module)))\n",
+    "print('exception_module')\n",
+    "print('例外依存関係数: '+ str(len(exception_module)))\n",
+    "\n",
     "print('java_line')\n",
     "print('ファイル数: '+ str(len(java_line)))\n",
     "print('java_commit')\n",
@@ -116,56 +121,109 @@
     "    file_list.append(i[0])\n",
     "\n",
     "\n",
-    "#java_lineにない依存関係を取り除く\n",
-    "new_java_module = []\n",
-    "for i in tqdm(java_module):\n",
+    "#java_lineにない例外依存関係を取り除く\n",
+    "new_exception_module = []\n",
+    "for i in tqdm(exception_module):\n",
     "    for j in file_list:\n",
     "        if i[1] in j:\n",
-    "            new_java_module.append([i[0],j])\n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "java_module = new_java_module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "#依存関係にないファイルを除外\n",
-    "j_commit = []\n",
-    "j_line = []\n",
-    "p_list  = []\n",
-    "\n",
-    "for i in tqdm(java_module):\n",
-    "    for j in java_commit:\n",
-    "        if (j[0] in i) and (j not in j_commit):\n",
-    "            j_commit.append(j)\n",
-    "\n",
-    "for i in tqdm(java_module):\n",
-    "    for j in java_line:\n",
-    "        if (j[0] in i) and (j not in j_line):\n",
-    "            j_line.append(j)\n",
-    "\n",
-    "for i in tqdm(java_module):\n",
-    "    for j in prob_list:\n",
-    "        if (j[0] in i) and (j  not in p_list):\n",
-    "            p_list.append(j)\n",
+    "            new_exception_module.append([i[0],j])\n",
     "            \n",
-    "java_commit = sorted(j_commit, key=lambda x:x[1], reverse=True)\n",
-    "java_line = sorted(j_line, key=lambda x:x[1], reverse=True)\n",
-    "prob_list  = sorted(p_list, key=lambda x:x[1], reverse=True)\n",
+    "#java_lineにない依存関係を取り除く\n",
+    "new_import_module = []\n",
+    "for i in tqdm(import_module):\n",
+    "    for j in file_list:\n",
+    "        if i[1] in j:\n",
+    "            new_import_module.append([i[0],j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(new_exception_module))\n",
+    "new_exception_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(new_import_module))\n",
+    "new_import_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#無効グラフの作成\n",
+    "undirected_module = []\n",
+    "for i in tqdm(new_import_module):\n",
+    "    undirected_module.append([i[1],i[0]])\n",
+    "    \n",
+    "undirected_module = new_import_module + undirected_module\n",
+    "len(undirected_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(new_import_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#例外処理のファイルの依存関係を取り除く\n",
+    "exclude_exception_module = []\n",
+    "for i in new_import_module:\n",
+    "    if i not in new_exception_module:\n",
+    "        exclude_exception_module.append(i)\n",
+    "        \n",
+    "print(len(exclude_exception_module))\n",
+    "exclude_exception_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#無効グラフの作成\n",
+    "#例外処理のファイルの依存関係を取り除く\n",
+    "#無効グラフの作成\n",
+    "exclude_undirected_module = []\n",
+    "for i in tqdm(exclude_exception_module):\n",
+    "    exclude_undirected_module.append([i[1],i[0]])\n",
     "\n",
-    "\"\"\""
+    "exclude_undirected_module = exclude_exception_module + exclude_undirected_module\n",
+    "len(exclude_undirected_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#依存関係の選択\n",
+    "#java_module = exclude_exception_module #<--有向グラフ 例外処理なし\n",
+    "#java_module = new_import_module   #<-- 有向グラフ 例外処理あり\n",
+    "java_module = undirected_module # <-- 無向グラフ 例外処理あり\n",
+    "#java_module = exclude_undirected_module  #<-- 無向グラフ 例外処理なし"
    ]
   },
   {
@@ -206,14 +264,15 @@
     "scan_type = 'default' #それ以外ならC_scan()を使用する\n",
     "\n",
     "#C_scan_hops()の設定\n",
-    "iter_num = 3     #CSの反復回数\n",
+    "iter_num = 10     #CSの反復回数\n",
     "hop_count = 2     #C_scan_hops()を使うときのホップ数\n",
     "\n",
     "#C_scanの設定\n",
     "threshold = 0.50   #領域拡大の停止条件(threshold=0.05 → 領域の行数が全体の5%以上になったら停止)\n",
     "\n",
     "#実行\n",
-    "result = cs.CS_run(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)"
+    "#result = cs.CS_run_repeat(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)\n",
+    "result = cs.CS_run_single(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)"
    ]
   },
   {
@@ -232,10 +291,10 @@
    "outputs": [],
    "source": [
     "#保存ファイル名の決定\n",
-    "Excel_name = 'result_1'\n",
+    "Excel_name = 'result_JSP_undirected_1'\n",
     "\n",
     "#データフレームへの変換\n",
-    "df = pd.DataFrame(result, columns=['ファイル名','p値'])\n",
+    "df = pd.DataFrame(result, columns=['ファイル名','p値','LLR値'])\n",
     "\n",
     "#エクセルデータとして結果を保存\n",
     "df.to_excel('../result/'+Excel_name+'.xlsx', sheet_name='new_sheet_name')"
