--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -9,7 +9,7 @@
     "#インポート\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "from tqdm.notebook import tqdm \n",
     "import openpyxl\n",
     "import git\n",
     "import os"
@@ -49,10 +49,10 @@
    "outputs": [],
    "source": [
     "print('リポジトリのULR : ' + repo_url + '\\n'\n",
-    "      #'行数データのファイル : ' + local_ripository_path + '\\n'\n",
-    "      #'依存関係のファイル : ' + dot_name + '\\n'\n",
     "      'クライアントID : ' + client_id + '\\n'\n",
-    "      'クライアントシークレット' + client_secret\n",
+    "      'クライアントシークレット : ' + client_secret + '\\n'\n",
+    "      '変更前のブランチ : ' + from_ver + '\\n'\n",
+    "      '変更後のブランチ : ' + to_ver\n",
     "     )"
    ]
   },
@@ -291,7 +291,7 @@
    "outputs": [],
    "source": [
     "#保存ファイル名の決定\n",
-    "Excel_name = 'result_JSP_undirected_1'\n",
+    "Excel_name = 'result_file'\n",
     "\n",
     "#データフレームへの変換\n",
     "df = pd.DataFrame(result, columns=['ファイル名','p値','LLR値'])\n",
