modify get_data() in Input_form

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -12,15 +12,8 @@
     "from tqdm.notebook import tqdm \n",
     "import openpyxl\n",
     "import git\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "#ローカルファイルの読み込み\n",
     "import data_make as dm   #データを取得するためのファイル\n",
     "import Input_form as Info #ファイル名の入力などを行うためのファイル"
@@ -32,28 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#リポジトリのURL指定\n",
-    "repo_url = Info.get_text('コミット情報を取得するのリポジトリのURL')\n",
-    "from_ver = Info.get_text('変更前のブランチ')\n",
-    "to_ver = Info.get_text('変更後のブランチ')\n",
-    "\n",
-    "#APIのid, KEY\n",
-    "client_id = Info.get_text('クライアントID')\n",
-    "client_secret = Info.get_text('クライアントシークレット')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('リポジトリのULR : ' + repo_url + '\\n'\n",
-    "      'クライアントID : ' + client_id + '\\n'\n",
-    "      'クライアントシークレット : ' + client_secret + '\\n'\n",
-    "      '変更前のブランチ : ' + from_ver + '\\n'\n",
-    "      '変更後のブランチ : ' + to_ver\n",
-    "     )"
+    "#取得するデータの指定\n",
+    "repo_url, from_ver, to_ver, client_id, client_secret = Info.get_data()  #リポジトリのURL指定, 比較するブランチ, APIのid, KEY"
    ]
   },
   {
@@ -63,14 +36,14 @@
    "outputs": [],
    "source": [
     "#ローカルリポジトリを作成するディレクトリの指定\n",
-    "#repo_path = '../repo'\n",
-    "#repo_path = '../repo2'\n",
-    "repo_path = '../repo3'\n",
+    "repo_path = '../repo'\n",
     "\n",
     "#すでに../repoにファイルが存在するならクローンしない\n",
     "if os.listdir(repo_path) == []:\n",
     "    #リポジトリのクローン\n",
-    "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver)"
+    "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver)\n",
+    "else:\n",
+    "    print('すでに../repoにはファイルが存在しています')"
    ]
   },
   {
