--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -35,13 +35,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ローカルリポジトリを作成するディレクトリの指定\n",
     "repo_path = '../repo'\n",
+    "\n",
+    "if not os.path.exists(repo_path):\n",
+    "    os.mkdir(repo_path)\n",
+    "    print(repo_path + 'を作成しました.')\n",
     "\n",
     "#すでに../repoにファイルが存在するならクローンしない\n",
     "if os.listdir(repo_path) == []:\n",
     "    #リポジトリのクローン\n",
-    "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver)\n",
+    "    #git.Repo.clone_from(repo_url, repo_path, branch=to_ver)\n",
+    "    print('a')\n",
     "else:\n",
     "    print('すでに../repoにはファイルが存在しています')"
    ]
@@ -192,36 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#依存関係の選択\n",
-    "#java_module = exclude_exception_module #<--有向グラフ 例外処理なし\n",
-    "#java_module = new_import_module   #<-- 有向グラフ 例外処理あり\n",
-    "java_module = undirected_module # <-- 無向グラフ 例外処理あり\n",
-    "#java_module = exclude_undirected_module  #<-- 無向グラフ 例外処理なし"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#結果の出力\n",
-    "print('java_module')\n",
-    "print(len(java_module))\n",
-    "print('java_line')\n",
-    "print(len(java_line))\n",
-    "print('java_commit')\n",
-    "print(len(java_commit))\n",
-    "print('prob_list')\n",
-    "print(len(prob_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#空間スキャン検定に必要なファイルの読み込み\n",
     "import CircularScan as cs"
    ]
@@ -232,20 +206,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CSのタイプを選択\n",
-    "#scan_type = 'hop'  #'hop'ならC_scan_hops()を使用.\n",
-    "scan_type = 'default' #それ以外ならC_scan()を使用する\n",
-    "\n",
-    "#C_scan_hops()の設定\n",
-    "iter_num = 10     #CSの反復回数\n",
-    "hop_count = 2     #C_scan_hops()を使うときのホップ数\n",
-    "\n",
-    "#C_scanの設定\n",
-    "threshold = 0.50   #領域拡大の停止条件(threshold=0.05 → 領域の行数が全体の5%以上になったら停止)\n",
+    "scan_method, scan_type, graph_type, exception_select, threshold, iter_num, hop_count = Info.data_get2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#依存関係の選択\n",
+    "if graph_type == '有効グラフ' and exception_select == \"なし\":\n",
+    "    java_module = exclude_exception_module #<--有向グラフ 例外処理なし\n",
+    "elif graph_type == '無向グラフ' and exception_select == \"なし\":\n",
+    "    java_module = exclude_undirected_module  #<-- 無向グラフ 例外処理なし\n",
+    "elif graph_type == '有効グラフ' and exception_select == \"あり\":\n",
+    "    java_module = new_import_module  #<-- 有向グラフ 例外処理あり\n",
+    "elif graph_type == '無向グラフ' and exception_select == \"あり\":\n",
+    "    java_module = undirected_module  #<-- 無向グラフ 例外処理あり\n",
+    "else:\n",
+    "    print('該当する依存関係なし')\n",
     "\n",
     "#実行\n",
-    "#result = cs.CS_run_repeat(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)\n",
-    "result = cs.CS_run_single(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)"
+    "if scan_method == 'repeat':\n",
+    "    result = cs.CS_run_repeat(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)\n",
+    "elif scan_method == 'single':\n",
+    "    result = cs.CS_run_single(java_line, java_commit, java_module, prob_list, scan_type, iter_num, hop_count, threshold)"
    ]
   },
   {
@@ -263,6 +249,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "result_path = '../result'\n",
+    "\n",
+    "if not os.path.exists(result_path):\n",
+    "    os.mkdir(result_path)\n",
+    "    print(result_path + 'を作成しました.')\n",
+    "\n",
     "#保存ファイル名の決定\n",
     "Excel_name = 'result_file'\n",
     "\n",
@@ -270,7 +262,7 @@
     "df = pd.DataFrame(result, columns=['ファイル名','p値','LLR値'])\n",
     "\n",
     "#エクセルデータとして結果を保存\n",
-    "df.to_excel('../result/'+Excel_name+'.xlsx', sheet_name='new_sheet_name')"
+    "df.to_excel(result_path+Excel_name+'.xlsx', sheet_name='new_sheet_name')"
    ]
   }
  ],
