--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "#取得するデータの指定\n",
-    "repo_url, from_ver, to_ver, client_id, client_secret = Info.get_data()  #リポジトリのURL指定, 比較するブランチ, APIのid, KEY"
+    "repo_url, from_ver, to_ver, client_id, client_secret = Info.data_get()  #リポジトリのURL指定, 比較するブランチ, APIのid, KEY"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_path = '../repo'\n",
+    "repo_path = '../repo_JSP'\n",
     "\n",
     "if not os.path.exists(repo_path):\n",
     "    os.mkdir(repo_path)\n",
@@ -44,8 +44,8 @@
     "#すでに../repoにファイルが存在するならクローンしない\n",
     "if os.listdir(repo_path) == []:\n",
     "    #リポジトリのクローン\n",
-    "    #git.Repo.clone_from(repo_url, repo_path, branch=to_ver)\n",
-    "    print('a')\n",
+    "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver)\n",
+    "    print('クローン成功')\n",
     "else:\n",
     "    print('すでに../repoにはファイルが存在しています')"
    ]
@@ -119,26 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(new_exception_module))\n",
-    "new_exception_module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(new_import_module))\n",
-    "new_import_module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#無効グラフの作成\n",
     "undirected_module = []\n",
     "for i in tqdm(new_import_module):\n",
@@ -154,23 +134,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(new_import_module)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#例外処理のファイルの依存関係を取り除く\n",
     "exclude_exception_module = []\n",
     "for i in new_import_module:\n",
     "    if i not in new_exception_module:\n",
-    "        exclude_exception_module.append(i)\n",
-    "        \n",
-    "print(len(exclude_exception_module))\n",
-    "exclude_exception_module"
+    "        exclude_exception_module.append(i)"
    ]
   },
   {
@@ -206,7 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_method, scan_type, graph_type, exception_select, threshold, iter_num, hop_count = Info.data_get2()"
+    "scan_method, scan_type, graph_type, exception_select, threshold, iter_num, hop_count = Info.data_get2()\n",
+    "threshold = float(threshold)\n",
+    "iter_num = int(iter_num)\n",
+    "hop_count = int(hop_count)"
    ]
   },
   {
@@ -249,6 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#結果の保存\n",
     "result_path = '../result'\n",
     "\n",
     "if not os.path.exists(result_path):\n",
@@ -263,6 +235,32 @@
     "\n",
     "#エクセルデータとして結果を保存\n",
     "df.to_excel(result_path+Excel_name+'.xlsx', sheet_name='new_sheet_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#実験のログを保存\n",
+    "log = ['リポジトリ : ' + repo_url + '\\n',\n",
+    "     'ブランチ : ' + from_ver + ' - ' + to_ver + '\\n',\n",
+    "     '結果ファイル : ' + Excel_name + '.xlsx \\n',\n",
+    "     'CSの関数 : '       + scan_method + '\\n' , \n",
+    "     '停止条件の種類 : ' + scan_type + '\\n' ,\n",
+    "     'グラフの種類 : '   + graph_type + '\\n', \n",
+    "     '例外処理 : '       + exception_select + '\\n' , \n",
+    "     'しきい値 : '       + str(threshold) + '\\n' ,\n",
+    "     'CSの実行回数 : '   + str(iter_num) + '\\n',\n",
+    "     'CSのホップ数 : '   + str(hop_count)]\n",
+    "\n",
+    "#書き込み\n",
+    "with open(result_path + '/' + Excel_name + '_result_log.txt', mode='w') as f:\n",
+    "    f.writelines(s)\n",
+    "\n",
+    "with open(result_path + '/' + Excel_name + '_result_log.txt') as f:\n",
+    "    print(f.read())"
    ]
   }
  ],
