add implements dependency

--- a/src/data_make_run.ipynb
+++ b/src/data_make_run.ipynb
@@ -34,9 +34,13 @@
    "source": [
     "repo_path = '../repo/' + to_ver\n",
     "\n",
-    "if not os.path.exists(repo_path):\n",
+    "if not os.path.exists('../repo'):\n",
+    "    os.mkdir('../repo')\n",
+    "    print('../repoを作成しました.')\n",
+    "    \n",
+    "if not os.path.exists('../repo/'+to_ver):\n",
     "    os.mkdir(repo_path)\n",
-    "    print(repo_path + 'を作成しました.')\n",
+    "    print('../repo/'+ to_ver + 'を作成しました.')\n",
     "\n",
     "#すでに../repoにファイルが存在するならクローンしない\n",
     "if os.listdir(repo_path) == []:\n",
@@ -44,7 +48,7 @@
     "    git.Repo.clone_from(repo_url, repo_path, branch=to_ver) #--> 後のバージョンのリポジトリ\n",
     "    print('クローン成功')\n",
     "else:\n",
-    "    print('すでに../repoにはファイルが存在しています')"
+    "    print('すでに'+repo_path+'にはファイルが存在しています')"
    ]
   },
   {
@@ -60,7 +64,7 @@
     "#変更行数の割合を取得\n",
     "prob_list = dm.get_prob_list(java_line, java_commit)\n",
     "#依存関係の取得\n",
-    "import_dependencies, exception_dependencies, class_interface_dic, extends_list, interface_extends_list = dm.get_dependencies(repo_path)"
+    "import_dependencies, exception_dependencies, class_interface_dic, extends_list, interface_extends_list,implements_list = dm.get_dependencies(repo_path)"
    ]
   },
   {
@@ -124,7 +128,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dependencies = new_import_dependencies + new_exception_dependencies + extends_list + interface_extends_list"
+    "for i in implements_list:\n",
+    "    for j in java_line:\n",
+    "        if j[0] in i[0]:\n",
+    "            i[0] = j[0]\n",
+    "        if j[0] in i[1]:\n",
+    "            i[1] = j[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_dependencies = new_import_dependencies + new_exception_dependencies + extends_list + interface_extends_list + implements_list"
    ]
   },
   {
@@ -142,7 +160,7 @@
     "new_all_dependencies = []\n",
     "for depend in all_dependencies:\n",
     "    if depend[0] in file_list and depend[1] in file_list:\n",
-    "        new_all_dependencies.append(i)\n",
+    "        new_all_dependencies.append(depend)\n",
     "\n",
     "#無効グラフの作成\n",
     "undirected_module = []\n",
@@ -162,7 +180,8 @@
     "print(len(new_import_dependencies))\n",
     "print(len(new_exception_dependencies))\n",
     "print(len(extends_list))\n",
-    "print(len(interface_extends_list))"
+    "print(len(interface_extends_list))\n",
+    "print(len(implements_list))"
    ]
   },
   {
@@ -171,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(java_module)"
+    "new_all_dependencies"
    ]
   },
   {
