add field_type dependency

--- a/src/data_make_run.ipynb
+++ b/src/data_make_run.ipynb
@@ -64,7 +64,7 @@
     "#変更行数の割合を取得\n",
     "prob_list = dm.get_prob_list(java_line, java_commit)\n",
     "#依存関係の取得\n",
-    "import_dependencies, exception_dependencies, class_interface_dic, extends_list, interface_extends_list,implements_list = dm.get_dependencies(repo_path)"
+    "import_dependencies, exception_dependencies, class_interface_dic, extends_list, interface_extends_list,implements_list,field_type_list = dm.get_dependencies(repo_path)"
    ]
   },
   {
@@ -142,7 +142,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dependencies = new_import_dependencies + new_exception_dependencies + extends_list + interface_extends_list + implements_list"
+    "new_field_type_list = []\n",
+    "for i in field_type_list:\n",
+    "    for j in java_line:\n",
+    "        if j[0] in i[0]:\n",
+    "            i[0] = j[0]\n",
+    "        if j[0] in i[1]:\n",
+    "            i[1] = j[0]\n",
+    "for i in field_type_list:\n",
+    "    if i[0] != i[1]:\n",
+    "        new_field_type_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_dependencies = new_import_dependencies + new_exception_dependencies + extends_list + interface_extends_list + implements_list + new_field_type_list"
    ]
   },
   {
@@ -181,7 +199,8 @@
     "print(len(new_exception_dependencies))\n",
     "print(len(extends_list))\n",
     "print(len(interface_extends_list))\n",
-    "print(len(implements_list))"
+    "print(len(implements_list))\n",
+    "print(len(new_field_type_list))"
    ]
   },
   {
@@ -190,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_all_dependencies"
+    "len(new_all_dependencies)"
    ]
   },
   {
